# bevy_water

./: .gitignore  Cargo.toml  README.md  build_ocean.sh  build_pirates.sh  build_pirates_taa.sh  build_wasm.sh  build_wasm_webgpu.sh  build_webgl2_example.sh  build_webgpu_example.sh  index.html  ocean_webgl2.d.ts  ocean_webgl2.js  ocean_webgpu.js  ocean_webgpu_bg.wasm.d.ts  pirates.html  pirates_taa.html  pirates_taa_webgpu.js  pirates_webgl2.d.ts  pirates_webgl2.html  pirates_webgl2.js  pirates_webgl2_bg.wasm.d.ts  pirates_webgpu.d.ts  pirates_webgpu.js  pirates_webgpu_bg.wasm.d.ts  showcase.webm  webgl2.html
assets/models/Kenney_pirate/: ship_dark.gltf
assets/models/dutch_ship_medium_1k/: README.md  dutch_ship_medium_1k.gltf
assets/shaders/: water.wgsl  water_bindings.wgsl  water_fragment.wgsl  water_functions.wgsl  water_vertex.wgsl
assets/shaders/noise/: fbm.wgsl  random.wgsl  vnoise.wgsl
assets/textures/: table_mountain_2_puresky_4k.md
assets/textures/coast_sand_01_1k/: README.md
examples/: cube.rs  debug_water_grid.rs  icosphere.rs  ocean.rs  ocean_depth_pass.rs  pirates.rs  pirates_bevy_sky.rs  pirates_ssr.rs  pirates_taa.rs  simple.rs  uvsphere.rs  wave_direction.rs
examples/wasm/: webgl2.html
src/: generate.rs  image_utils.rs  lib.rs  param.rs  water.rs  wave.rs
src/water/: material.rs
