[package]
name = "bevy_water"
version = "0.17.2"
edition = "2021"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
license = "MIT OR Apache-2.0"
description = "Dynamic ocean material for Bevy."
keywords = ["water", "ocean", "waves", "bevy"]
repository = "https://github.com/Neopallium/bevy_water"
homepage = "https://github.com/Neopallium/bevy_water"

exclude = [
  "examples/*",
  "showcase.webp",
  "assets/models/*",
  "assets/textures/*",
  "assets/environment_maps/*",
]

[features]
default = ["webgl2", "embed_shaders", "depth_prepass", "image_utils"]

# Embed the shaders at compile-time.
embed_shaders = []

# file/embed watcher
file_watcher = ["bevy/file_watcher", "bevy/embedded_watcher"]

# Enable inspector in examples.
inspector = []

# Enable debug lines in examples.
debug = []

# Enable bevy_atmosphere support in the examples.
atmosphere = []

# Enable Screen Space Reflections support.
ssr = ["depth_prepass"]

# Enable bevy_spectator support in the examples.
spectator = []

# Enable bevy_panorbit_camera support in the examples.
panorbit = []

# Enable DepthPrepass in examples.
depth_prepass = []

# Include ImageUtils
image_utils = ["bevy/jpeg"]

# Select WebGL2 or WebGPU support.
# Use webgl2 for native builds (non-wasm).
webgl2 = ["bevy/webgl2"]
webgpu = ["bevy/webgpu"]

[dependencies]
anyhow = "1.0"
bevy = { version = "0.17.2", default-features = false, features = [
  "bevy_asset",
  "bevy_render",
  "bevy_pbr",
  "bevy_log",
] }

[dev-dependencies]
bevy = { version = "0.17.2", features = [
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_log",
  "png",
  "jpeg",
  "hdr",
  "ktx2",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
] }
bevy-inspector-egui = { version = "0.34" }
##bevy_atmosphere = { version = "0.13" }
##bevy_prototype_debug_lines = { version = "0.11", features = ["3d"] }
#bevy_spectator = { version = "0.8" }
bevy_panorbit_camera = { version = "0.30", features = ["bevy_egui"] }
